--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,54 +1,50 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Chirpy!</title>
+<html lang="en">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link rel='stylesheet' type='text/css' href='./css/style.css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <title>Project 2</title>
+</head>
 
-    <!-- jQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-    <!-- Moment.js -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
-
-    <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-
-  </head>
-  <body>
-
-    <div class="jumbotron">
-      <h1 class="text-center">Chirpy!</h1>
-    </div>
-
-    <div class="container">
-
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <p class="cool-font">Name</p>
-          <input class="form-control" type="text" id="author" placeholder="Enter Your Name">
-          <br>
-          <p class="cool-font">Chirp</p>
-          <textarea class="form-control" rows="3" id="chirp-box" placeholder="Enter Chirp Here!"></textarea>
-          <button id="chirp-submit" class="btn btn-lg pull-right">Submit!</button>
-        </div>
+<body>
+  <div class="container ">
+    <div class="row">
+      <div class="col s6">
+        <h5 class="heading h1">Shopping Cart</h5>
       </div>
-
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <h2>Chirps</h2>
-          <hr>
-          <div id="chirp-area"></div>
-        </div>
+      <div class="col s6">
+        <i class="medium material-icons right">shopping_cart</i>
       </div>
-
+    
     </div>
+  
+  <nav>
+    <div class="nav-wrapper blue-grey darken-1">
+      
+    </div>
+  </nav>
 
-  <script type="text/javascript" src="js/chirp.js"></script>
-  </body>
+  </div>
+
+  
+
+
+
+
+
+
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src='script.js'></script>
+</body>
+
 </html>
