--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,11 @@
           <div class="input-field col s4 right">
             <select id="options">
               <option value="" disabled selected>Select options</option>
-              <option value="1">Entertainments</option>
+              <option value="1">Beauty</option>
               <option value="2">Sports</option>
-              <option value="3">Beauty</option>
-              <option value="4">Music</option>
-              <option value="5">Miscellaneous</option>
+              <option value="3">Food</option>
+              <option value="4">Apparel</option>
+              <option value="5">Entertainments</option>
               <option value="5">Others</option>
             </select>
           </div>
@@ -51,15 +51,53 @@
   
       </div>
       <div class="row">
-        <div class="card col s3 left">
+        <div class="card col s3 left hoverable">
   
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="img/headphone.jpg">
-  
+            <a href="itemDescription.html"><img class="activator" src= "img/headphone.jpg"></a>
           </div>
           <div class="card-content">
+            <h6 class="black-text left">Post Reviews</h6>
+            <h6><a href="#" class="black-text darken-1-text right">$90</a></h6>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="card col s3 left hoverable">
   
-            <p><a href="#" class="black-text darken-1-text right">Add to cart</a></p>
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="itemDescription.html"><img class="activator" src= "img/headphone.jpg"></a>
+          </div>
+          <div class="card-content">
+            <h6 class="black-text left">Post Reviews</h6>
+            <h6><a href="#" class="black-text darken-1-text right">$90</a></h6>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="card col s3 left hoverable">
+  
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="itemDescription.html"><img class="activator" src= "img/headphone.jpg"></a>
+          </div>
+          <div class="card-content">
+            <h6 class="black-text left">Post Reviews</h6>
+            <h6><a href="#" class="black-text darken-1-text right">$90</a></h6>
+          </div>
+        </div>
+      </div>
+      
+      <div class="row">
+        <div class="card col s3 left hoverable">
+  
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="itemDescription.html"><img class="activator" src= "img/headphone.jpg"></a>
+          </div>
+          <div class="card-content">
+            <h6 class="black-text left">Post Reviews</h6>
+            <h6><a href="#" class="black-text darken-1-text right">$90</a></h6>
           </div>
         </div>
       </div>
